[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/enemy_droid.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/enemy_droid_gun.png" type="Texture" id=2]
[ext_resource path="res://Enemies/enemy_droid.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 67.082

[sub_resource type="CircleShape2D" id=3]
radius = 13.4164

[node name="enemy_droid" type="KinematicBody2D"]
collision_layer = 17
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 1.5, 0.5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0.5, 0.5 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 200, 0 )
collision_mask = 256

[node name="BulletSpawn" type="Node2D" parent="RayCast2D"]
position = Vector2( 15, 0 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[node name="Timer2" type="Timer" parent="."]

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
